name:                pure-radar
version:             0.8.0.0
synopsis:            SVG radar charts
homepage:            purehs.org/doc/pure-radar
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-radar.git

library
  exposed-modules:
    Pure.Radar
    Pure.Radar.Utils
  build-depends:       
    base,
    pure,
    pure-theme,
    pure-css,
    pure-prop,
    pure-styles,
    pure-svg,
    pure-txt
  hs-source-dirs:      src
  default-language:    Haskell2010
